[gd_scene load_steps=3 format=3 uid="uid://dfct5c8fko1ro"]

[ext_resource type="Script" path="res://scripts/tour-menu/hud-test.gd" id="1_20dt5"]
[ext_resource type="Texture2D" uid="uid://ciu0sxwtavptb" path="res://assets/tower_ui/chibi.png" id="2_jnbsh"]

[node name="hud-test" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_20dt5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -97.0
offset_right = 160.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="UiLimit" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(94, 86)
layout_mode = 2

[node name="TowerButton1" type="TextureButton" parent="CenterContainer/UiLimit"]
custom_minimum_size = Vector2(60, 100)
layout_mode = 2
texture_normal = ExtResource("2_jnbsh")
ignore_texture_size = true
stretch_mode = 5

[connection signal="mouse_entered" from="CenterContainer/UiLimit/TowerButton1" to="." method="_on_tower_button_1_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/UiLimit/TowerButton1" to="." method="_on_tower_button_1_mouse_exited"]
[connection signal="pressed" from="CenterContainer/UiLimit/TowerButton1" to="." method="_on_tower_button_1_pressed"]
